# ev-grid-oracle

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  env_bescom.py  openenv.yaml  pyproject.toml  record_baseline.py  render.py  requirements.txt  rewards.py  run_smoke_test.py  run_trained_oracle.py  setup_colab.sh  test_oracle.py  train_ev_oracle.ipynb  train_grpo.py  validate-submission.sh
artifacts/: eval_snapshot.json  fair_eval_results.json  paired_eval_heatwave.json
assets/: README.md
docs/: hackathon-official-resources.md  hf-mini-blog-ev-grid-oracle.md
ev_grid_oracle/: __init__.py  bescom_feed.py  city_graph.py  demand_sim.py  env.py  grid_sim.py  models.py  multi_agent.py  oracle_agent.py  parsing.py  personas.py  policies.py  reward.py  reward_hack.py  road_env.py  road_models.py  scenarios.py  traffic.py  world_model_verifier.py
ev_grid_oracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  ev_grid_environment.py  ev_grid_road_environment.py  road_router.py  role_metrics.py
tests/: test_demo_api.py  test_env_determinism.py  test_evaluate_paired.py  test_fair_eval_mcnemar.py  test_models_and_graph.py  test_policies_collapse.py  test_reward.py  test_world_model_verifier.py
tools/: build_road_graph.py  build_roads_render.py  export_grpo_tensorboard_plots.py  fetch_bangalore_roads_overpass.py  fetch_osm_roads.py  prune_osm_geojson.py  road_reward_smoke.py  sync_space_to_hub.py  write_eval_snapshot.py
training/: __init__.py  eval_results.json  evaluate.py  fair_eval.py  (+2 more)
(+44 files in other folders)
